# chatbot

GoogleApiAnalyzer/: app.py  list_models.py  models.py  pyproject.toml
GoogleApiAnalyzer/routes/: __init__.py  chat.py
GoogleApiAnalyzer/static/css/: __init__.py  style.css
GoogleApiAnalyzer/static/js/: __init__.py  script.js
GoogleApiAnalyzer/templates/: index.html
GoogleApiAnalyzer/utils/: gemini.py
